[package]
name = "rbx_types"
description = "Types used to represent Roblox values"
version = "1.5.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rojo-rbx/rbx-dom"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
impl = ["dep:nalgebra", "dep:colors-transform"]
mlua = ["impl", "dep:mlua"]

[dependencies]
base64 = "0.13.0"
blake3 = "1.3.1"
bitflags = "1.3.2"
lazy_static = "1.4.0"
rand = "0.8.5"
thiserror = "1.0.31"
serde = { version = "1.0.137", features = ["derive"], optional = true }
mlua = { version = "0.9.0-rc.1", features = ["luau"], optional = true }
nalgebra = { version = "0.32.3", optional = true }
colors-transform = { version = "0.2.11", optional = true }

[dev-dependencies]
insta = { version="1.14.1", features=["yaml"] }
bincode = "1.3.3"
serde_json = "1.0.81"
